--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "CommonJS",
     "target": "ES2020",
     "outDir": "dist",
     "sourceMap": true,
+    "types": ["node"],
     "experimentalDecorators": true,
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true
