--- a/.github/workflows/api-ci.yaml
+++ b/.github/workflows/api-ci.yaml
@@ -9,5 +9,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "13.7"
+      - run: cd api
       - run: npm install
       - run: npm run lint
