switched out express api with nest js

--- a/.github/workflows/api-ci.yaml
+++ b/.github/workflows/api-ci.yaml
@@ -13,3 +13,5 @@ jobs:
         working-directory: api
       - run: npm run lint
         working-directory: api
+      - run: npm run test
+        working-directory: api
