--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2020",
-    "outDir": "dist",
-    "sourceMap": true,
-    "types": ["node"],
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
     "emitDecoratorMetadata": true,
-    "allowSyntheticDefaultImports": true
+    "experimentalDecorators": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
