--- a/api/package.json
+++ b/api/package.json
@@ -2,54 +2,67 @@
   "name": "avatar-hats",
   "version": "1.0.0",
   "description": "Seasonal hats for your online avatar",
-  "main": "./dist/src/index.js",
+  "author": "",
+  "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-nodemon",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "dev": "nest start --debug --watch",
+    "serve": "node dist/main",
     "lint": "eslint './src/**/*.{jsx,js,ts,tsx,json}' && tsc --noEmit",
     "lint:fix": "eslint --fix './src/**/*.{jsx,js,ts,tsx,json}' && tsc --noEmit",
-    "codegen_with_docker": "../codegen/codegen_with_docker.sh",
-    "codegen": "./codegen/codegen.sh"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rgbdelta/Avatar-Hats.git"
+  "dependencies": {
+    "@nestjs/common": "^6.10.14",
+    "@nestjs/core": "^6.10.14",
+    "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.2.8",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3"
   },
-  "keywords": [
-    "hats",
-    "steam",
-    "avatar",
-    "ml",
-    "face",
-    "detection"
-  ],
-  "author": "Abgier Avraha",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rgbdelta/Avatar-Hats/issues"
-  },
-  "homepage": "https://github.com/rgbdelta/Avatar-Hats#readme",
   "devDependencies": {
-    "@trongnd/ts-nodemon": "^1.0.3",
+    "@nestjs/cli": "^6.13.2",
+    "@nestjs/schematics": "^6.8.1",
+    "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
-    "@types/node": "^13.7.0",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "@types/jest": "25.1.2",
+    "@types/node": "^13.1.6",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "sonarjs": "^1.0.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "25.2.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.5"
   },
-  "dependencies": {
-    "@decorators/di": "^1.0.2",
-    "@tsed/common": "^5.40.1",
-    "@types/morgan": "^1.7.37",
-    "express": "^4.17.1",
-    "morgan": "^1.9.1",
-    "tsyringe": "^4.0.1"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
