--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,3 +1,6 @@
+# API Specific
+/files
+
 # compiled output
 /dist
 /node_modules
@@ -32,6 +35,3 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-# Misc
-upload-temp/*
